Extração de Dados

--- a/tcc/tcc.bib
+++ b/tcc/tcc.bib
@@ -188,6 +188,12 @@ extraction and categorization",
   note      = "$<$Disponível em: \url{https://opennlp.apache.org/}$>$. Acesso em: 27 de Fevereiro de 2017."
 }
 
+@misc{jsonschema2pojo,
+	author = "{JSON Schema 2 POJO}",
+	title  = "JSON Schema 2 POJO",
+	year   = "2017",
+	note      = "$<$Disponível em: \url{http://www.jsonschema2pojo.org/}$>$. Acesso em: 27 de Maio de 2017."
+}
 @inproceedings{Brill:1992:SRP:974499.974526,
  author = {Brill, Eric},
  title = {A Simple Rule-based Part of Speech Tagger},
