--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -29,6 +29,22 @@
 \setdescription{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
 \setitemize{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
 \setenumerate{topsep=1em,parsep=0pt,partopsep=0pt,itemsep=0pt}
+\lstset{frame=tb,
+  language=Java,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  numbers=none,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{red},
+  breaklines=true,
+  breakatwhitespace=true,
+  tabsize=3
+}
 
 \course{\cgcc}
 \title{O Uso de Processamento de Linguagem Natural para a Análise de
@@ -92,6 +108,8 @@ Banca examinadora:\par
 \acro{MaxEnt}[MaxEnt]{\textit{Maximum Entropy}}
 \acro{RNTN}[RNTN]{\textit{Recursive Neural Tensor Networks}}
 \acro{VADER}[VADER]{\textit{Valence Aware Dictionary and sEntiment Reasoner}}
+\acro{JSON}[JSON]{\textit{JavaScript Object Notation}}
+\acro{POJO}[POJO]{\textit{Plain Old Java Objects}}
 \end{acronym}
 \listoffigures
 \listoftables
@@ -113,7 +131,7 @@ Banca examinadora:\par
 \include{capitulos/capitulo1}
 \include{capitulos/capitulo2}
 \include{capitulos/capitulo3}
-% \include{capitulos/capitulo4}
+\include{capitulos/capitulo4}
 % \include{capitulos/capitulo5}
 % \include{capitulos/capitulo6}
 % \include{capitulos/capitulo7}
