--- a/tcc/capitulos/capitulo1.tex
+++ b/tcc/capitulos/capitulo1.tex
@@ -4,7 +4,7 @@
 % Um computador, obviamente, está preparado para entender sua própria linguagem,
 % como por exemplo, um compilador interpreta linhas de código fonte para gerar um
 % programa executável seguindo exatamente o algoritmo utilizado. Por isso, temos o
-% termo Natural no Processamento de Linguagem. 
+% termo Natural no Processamento de Linguagem.
 
 O objetivo da área de Processamento de Linguagem Natural é analisar a linguagem natural, ou seja, a linguagem utilizada pelo seres humanos não
 importando se essa é escrita ou falada \cite{manningschutze1999}.
@@ -39,18 +39,18 @@ Na linguagem tanto escrita, como na falada, existem regras que são utilizadas
 para estruturar as expressões. Uma série de dificuldades no Processamento de
 Linguagem Natural são ocasionadas pelo fato de que as pessoas constantemente
 mudam essas regras para satisfazerem suas necessidades de comunicação
-\cite{manningschutze1999}. Uma vez que as regras são constantemente modificadas pelo loucutor, se torna extremamente difícil a criação de um software ou hardware efetue a interpretação de uma língua. 
+\cite{manningschutze1999}. Uma vez que as regras são constantemente modificadas pelo loucutor, se torna extremamente difícil a criação de um software ou hardware efetue a interpretação de uma língua.
 
 
 % \subsection{Sintaxe e Semântica}
-% 
+%
 % No seu livro Estruturas Sintáticas, Noam Chomsky cita as seguintes frases
 % ``Ideias verdes incolores dormem furiosamente'' e ``Incolores verde ideias dormem
 % furiosamente''.
-% 
+%
 % A primeira frase, do ponto de vista sintático é correta, porém, assim como a
 % segunda frase, semânticamente não faz sentido.
-% 
+%
 % O fato de que podemos modificar as regras da lingua de duas formas distintas é
 % utilizado como evidência para a separação da sintaxe e semântica na língua.
 % \cite{jacksonmoulinier2007}
@@ -85,7 +85,7 @@ análise de sentimentos, sendo que os métodos específicos que são utilizados 
 identificação de sentimentos serão descritos no Capítulo \ref{cap:Classificadores}.
 
 
-\subsection{Método Simbólico} 
+\subsection{Método Simbólico}
 O método simbólico ou racionalista está
 baseado no campo da Linguística e faz o uso da manipulação dos símbolos,
 significados e das regras de um texto. Um exemplo de método simbólico é o
@@ -96,9 +96,9 @@ serão classificadas através de um dicionário pré-definido, como:
 \begin{table}[htb]
 \centering
 \begin{tabular}{l|l|l|l|l|l|l}
-Palavra         & João        & pintou & a      & casa        & de        
+Palavra         & João        & pintou & a      & casa        & de
 & branco
-         \\
+\\
 %Correta: & Substantivo & Verbo  & Artigo & Substantivo & Preposição &
 % Substantivo \\
 Classificação:   & 			   & Verbo  & Artigo & Substantivo & Preposição & Adjetivo
@@ -120,9 +120,9 @@ classificada como verbo.
 \begin{table}[htb]
 \centering
 \begin{tabular}{l|l|l|l|l|l|l}
-Palavra         & João        & pintou & a      & casa        & de        
+Palavra         & João        & pintou & a      & casa        & de
 & branco
-         \\
+\\
 %Correta: & Substantivo & Verbo  & Artigo & Substantivo & Preposição &
 % Substantivo \\
 Classificação:   & \textbf{Substantivo} & Verbo  & Artigo & Substantivo &
@@ -137,7 +137,7 @@ Após essa classificação inicial, o método executa o seguinte conjunto de
 regras, ou ainda, regras derivadas dessas:
 
 \begin{itemize}
-   \item Se uma palavra tem a classificação \textbf{A} e está no contexto
+  \item Se uma palavra tem a classificação \textbf{A} e está no contexto
   \textbf{C} então a sua classificação deverá ser mudada para \textbf{B}. Por
   exemplo, se uma palavra \textbf{A} (branco no exemplo) é um adjetivo e uma das
   duas palavras anteriores é uma preposição (``de'' no contexto \textbf{C}
@@ -151,8 +151,8 @@ regras, ou ainda, regras derivadas dessas:
   \overbrace{\text{de}}^\text{Preposição}}_\text{Contexto \textbf{C}}
   \underbrace{\overbrace{\text{branco}}^{\textcolor{red}{Adjetivo}}}_\text{Classificação
   \textbf{A}\textrightarrow\textbf{B}}
- \]
- 
+  \]
+  
   \item Se uma palavra tem a classificação \textbf{A} e tem uma propriedade
   \textbf{P} então a sua classificação deverá ser alterada para \textbf{B}. Por
   exemplo, se uma palavra \textbf{A} (``Linda'') foi classificada como um
@@ -164,28 +164,28 @@ regras, ou ainda, regras derivadas dessas:
   \overbrace{\text{para}}^\text{Preposição}
   \underbrace{\overbrace{\text{L}\text{inda}}^{\textcolor{red}{Adjetivo}}}_\text{Classificação
   \textbf{A}\textrightarrow\textbf{B}}
- \]
- 
+  \]
+  
   \item Se uma palavra tem a classificação \textbf{A} e uma palavra com a
   propriedade \textbf{P} está na região \textbf{R}, sua classificação deverá
   ser \textbf{B}. Por exemplo, se uma das duas palavras anteriores (``João
   adora" na região \textbf{R}) iniciam com letra maiúscula (propriedade
   \textbf{P}), sua classificação deverá ser alterada para substantivo (classificação \textbf{B}).
   
-   \[\underbrace{\overbrace{\text{João}}^\text{Substantivo}
+  \[\underbrace{\overbrace{\text{João}}^\text{Substantivo}
   \overbrace{\text{adora}}^\text{Verbo}}_\text{Região \textbf{R}}
   \underbrace{\overbrace{\text{L}\text{inda}}^{\textcolor{red}{Adjetivo}}}_\text{Classificação
   \textbf{A}\textrightarrow\textbf{B}}
- \]
- 
+  \]
+  
   
 \end{itemize}
 
-\subsection{Método Estatístico} 
+\subsection{Método Estatístico}
 Um método estatístico utiliza-se de uma grandes
 quantidade de texto, procurando por padrões e
 associações a modelos, sendo que esses padrões podem ou não estar relacionados
-com regras sintáticas ou semânticas. 
+com regras sintáticas ou semânticas.
 
 Os métodos estatísticos baseia-se na utilização de um sistema de aprendizado
 supervisionado, ou seja, a classificação é feita a partir de um conjunto de dados já
@@ -205,10 +205,10 @@ A Figura \ref{fig:markov} representa o conjunto de possibilidades que o
 classificador pode utilizar para a classificação completa da frase.
 
 \begin{figure}[htbp]
- \centering
- \includegraphics[height=180px]{imagens/markov.png}
- \caption{Caminhos possíveis de classificação}
- \label{fig:markov}
+\centering
+\includegraphics[height=180px]{imagens/markov.png}
+\caption{Caminhos possíveis de classificação}
+\label{fig:markov}
 \end{figure}
 
 A idéia central da utilização de Modelos de Markov é
@@ -242,7 +242,7 @@ demais palavras e classes.
 \centering
 \begin{tabular}{|l|l|l|l|l|}
 \hline
-            & João  & comprou & um     & carro  \\ \hline
+& João  & comprou & um     & carro  \\ \hline
 Substantivo & 0.001 & 0       & 0.015  & 0.005  \\ \hline
 Verbo       & 0     & 0.0042  & 0      & 0      \\ \hline
 Artigo      & 0     & 0       & 0.025  & 0      \\ \hline
@@ -257,20 +257,20 @@ probabilidade de transição de uma classe para a outra. Neste caso, o
 \textit{training set} hipotético apresenta as seguintes características:
 
 \begin{itemize}
-   \item De 20000 frases, 2500 iniciam com um substantivo, 5000 iniciam com um
-   verbo, 5000 iniciam com um artigo e 5000 iniciam com um pronome.
-   \item De 10000 substantivos, 10000
-   são seguidos por verbos.
-   \item De 12000 verbos, 3000 são seguidos por um substantivo, 2000
-   são seguidos por um outro verbo, 5000 são seguidos por um artigo e 2000 são
-   seguidos por um pronome.
-   \item De 20000 artigos, 20000 são seguidos por um substantivo.
-   \item De 15000 pronomes, 10000 são seguidos por um substantivo e 5000 são
-   seguidos por um verbo.
-    
-   
-\end{itemize}
+  \item De 20000 frases, 2500 iniciam com um substantivo, 5000 iniciam com um
+  verbo, 5000 iniciam com um artigo e 5000 iniciam com um pronome.
+  \item De 10000 substantivos, 10000
+  são seguidos por verbos.
+  \item De 12000 verbos, 3000 são seguidos por um substantivo, 2000
+  são seguidos por um outro verbo, 5000 são seguidos por um artigo e 2000 são
+  seguidos por um pronome.
+  \item De 20000 artigos, 20000 são seguidos por um substantivo.
+  \item De 15000 pronomes, 10000 são seguidos por um substantivo e 5000 são
+  seguidos por um verbo.
   
+  
+\end{itemize}
+
 Neste caso, a probabilidade de transição de um verbo para um substantivo é dada
 pela equação:
 
@@ -291,7 +291,7 @@ o cálculo da probabilidade da frase iníciar com determinada classe. A Tabela
 \centering
 \begin{tabular}{|l|l|l|l|l|}
 \hline
-            & Substantivo & Verbo & Artigo & Pronome \\ \hline
+& Substantivo & Verbo & Artigo & Pronome \\ \hline
 Início      & 0.125       & 0.25  & 0.25   & 0.25    \\ \hline
 Substantivo & 0.0         & 1.0   & 0.0    & 0.0     \\ \hline
 Verbo       & 0.25        & 0.17  & 0.42   & 0.17    \\ \hline
@@ -300,7 +300,7 @@ Pronome     & 0.67        & 0.33  & 0.0    & 0.0     \\ \hline
 \end{tabular}
 \caption{Tabela de Probabilidade de Transição}
 \label{tabela:transicao}
-\end{table} 
+\end{table}
 
 A partir das probabilidades anteriores cálculadas através do Modelo de Markov, é
 utilizado o algoritmo de Viterbi para determinar o caminho mais provável. Esse cálculo
@@ -324,17 +324,17 @@ Para ``comprou'', além dos valores retirados das tabelas \ref{tabela:transicao}
 e \ref{tabela:associacao}, $v_{t-1}$ é representado pelo cálculo do
 caminho anterior, ou seja, 0.000125:
 
-\[ v_t(j) = 0.000125 * 1 * 0.0042 = 0.000000525 \] 
+\[ v_t(j) = 0.000125 * 1 * 0.0042 = 0.000000525 \]
 
 Ao efetuar o cálculo de todos os caminhos, para determinar qual a classificação
 correta de uma palavra, é escolhido o caminho que tem maior probabilidade, no
 caso apresentado, a palavra ``um'' é classificada como artigo.
 
 \begin{figure}[htbp]
- \centering
- \includegraphics[height=180px]{imagens/markov2.png}
- \caption{Caminhos já decididos de classificação}
- \label{fig:markov2}
+\centering
+\includegraphics[height=180px]{imagens/markov2.png}
+\caption{Caminhos já decididos de classificação}
+\label{fig:markov2}
 \end{figure}
 
 Como visto, o método simbólico para resolver problemas de Processamento de
@@ -346,16 +346,16 @@ problema.
 
 % Uma maneira de diferenciarmos os dois métodos é através do problema de
 % ambiguidade. Por exemplo, nas frases:
-% 
+%
 % ``João entrou no carro conversível de óculos novos.''. E ``João entrou no carro
 % conversível de farol apagado.''.
-% 
+%
 % Em ambas as frases, após a preposição ``de'' segue um substantivo masculino.
 % Porém, cada uma das frases se refere a um substantivo diferente. A
 % primeira se refere ao João, visto que não existe sentido em um carro ter óculos.
 % Já a segunda se refere ao próprio carro, visto que não existe sentido em João
 % ter faróis.
-% 
+%
 % O método simbólico para resolver esse problema faz a criação de novas regras se
 % baseadas no conhecimento humano para a solução de qual o significado da frase.
 % Já o método estatístico, irá verificar qual a probabilidade de cada significado
@@ -373,188 +373,173 @@ problema.
 
 \section{Naive Bayes}
 
-O classificador Naive Bayes é um classificador baseado no teorema de Bayes com
-independencia entre seus atributos.
+O Naive Bayes é um método estatístico para a classificação o qual podemos
+aplicar para a análise de sentimento. Ele faz uso do teorema de Bayes para
+que a partir de um \textit{training set} se possa inferir uma classificação.
 
-O teorema de Bayes é representado da seguinte forma:
+Por exemplo, precisamos determinar se a seguinte frase demonstra um sentimento
+negativo ou positivo: ``This place is great.'', como este método faz uso de um
+\textit{training set} para a classificação, será considerado o seguinte \textit{training set} hipotético:
 
-\[ P(c|d) = \frac{P(d|c) P(c)}{P(d)}  \]
+\begin{table}[htb]
+\centering
+\begin{tabular}{|l|l|}
+\hline
+Texto  & Categoria \\ \hline
+The food was great  & Positiva     \\ \hline
+They are horrible!    & Negativa     \\ \hline
+I love the food here  & Positiva     \\ \hline
+This place is wonderful  & Positiva     \\ \hline
+Forgettable experience  & Negativa     \\ \hline
+\end{tabular}
+\caption{\textit{Training Set}}
+\label{tab:trainingsetnb}
+\end{table}
 
-Supondo que precisamos determinar se o carro que João comprou na frase ``João
-comprou um Focus.'' é o modelo sedan ou hatch.
- 
+A partir do \textit{training set} representado pela tabela
+\ref{tab:trainingsetnb} o método irá calcular a probabilidade da frase ``This
+place is great'' ser positiva e também a possibilidade dela ser uma frase
+negativa e a partir dessas duas possibilidades, será escolhida a maior.
+
+
+\subsection{Teorema de Bayes}
+
+Para cálcular a probabilidade da frase ``This place is great'' pertencer a cada categoria
+utilizando o teorema da Bayes, é aplicada a seguinte equação:
+
+\[ P(c|d)
+=
+\frac{P(d|c) \times P(c)}{P(d)}
+\]
+\[ P(Positiva|\textit{This place is great})
+=
+\frac{P(\textit{This place is great}|Positiva) \times
+P(Positiva)}{P(\textit{This place is great})}
+\]
+\[ P(Negativa|\textit{This place is great})
+=
+\frac{P(\textit{This place is great}|Negativa) \times
+P(Negativa)}{P(\textit{This place is great})}
+\]
+
+
 \begin{itemize}
   \item P(c$\vert$d) é a probabilidade de \textbf{d} pertencer a classe
-  \textbf{c}. Ou seja, a probabilidade do carro Focus ser um sedan.
+  \textbf{c}. Ou seja, a probabilidade de \textit{``This place is great''} ser
+  uma frase positiva ou negativa.
   \item P(d$\vert$c) é a probabilidade da classe \textbf{c} ser \textbf{d}. Ou
-  seja, dentre todas as sedans, a probabilidade de um sedan ser
-  um Focus.
+  seja, dentre todas as frases negativas ou positivas, a probabilidade de
+  uma frase ser \textit{``This place is great''}.
   \item P(c) é a probabilidade da classe \textbf{c}. Ou seja, a frequência que
-  sedans aparecem no nosso banco de dados.
-  \item P(d) é a probabilidade de \textbf{d}. Ou seja, a frequência que Focus aparecem no nosso banco de dados.
+  frases negativas ou positivas aparecem em nosso \textit{training
+  set}.
+  \item P(d) é a probabilidade de \textbf{d}. Ou seja, a frequência que
+  a frase \textit{``This place is great''} aparece em nosso \textit{training
+  set}.
 \end{itemize}
 
-Levando em consideração que temos o banco de dados representado pela tabela
-abaixo:
+Como ambas as equações, para cálculo da probabilidade de ser negativa e positiva
+tem como divisor a frase que estamos classificando, a comparação entre as
+classificações é realizada através de:
+\[ P(Negativa|\textit{This place is great})
+=
+P(\textit{This place is great}|Negativa) \times
+P(Negativa)
+\]
+\[ P(Positiva|\textit{This place is great})
+=
+P(\textit{This place is great}|Positiva) \times
+P(Positiva)
+\]
+
+Porém, a frase \textit{``This place is great''} não existe no
+\textit{training set} tornando sua probabilidade 0.
+
+\subsection{\textit{Naive}}
+
+O método \textit{Naive Bayes} surge para solucionar o problema anterior,
+aonde se torna díficil obter um \textit{training set} com inúmeras frases
+já classificadas tornando o resultado do cálculo de probabilidade como 0.
+
+Bayes como visto, é relacionado com o teorema utilizado para cálculo da
+probabilidade, já a palavra \textit{naive}, ou ingênuo é relacionado com sua
+outra característica, que é a
+independência entre atributos. Esses, para o aprendizado de máquina, são
+características da informação que estamos classificando. Por exemplo, ao efetuar uma classificação relacionada com medicina, atributos que seriam considerados poderiam ser histórico de doença, altura da pessoa e peso. No caso da análise de sentimentos, os atributos
+são as próprias palavras do texto, ou seja, em sua classificação, ele ignora a
+ordem das palavras e somente considera a frequência na qual elas aparecem.
+Portanto para o \textit{Naive Bayes}:
+\[ P(\textit{This place is great}|Positiva) =\]\[ P(\textit{This}|Positiva) \times
+P(\textit{place}|Positiva) \times P(\textit{is}|Positiva) \times
+P(\textit{great}|Positiva)
+\]
+
+Aonde que, por exemplo, P(\textit{This}$\vert$Positiva) é a quantidade de vezes que a
+palavra \textit{This} foi classificada como positiva em nosso \textit{training
+set} dividido pelo total de palavras classificadas como positiva:
+\[P(\textit{This}|Positiva) = 1 / 13\]
+
+Como algumas palavras podem não existir em nosso \textit{training set}, tornando
+o resultado final da multiplicação das probabilidades de cada palavra como 0, é
+utilizado \textit{Laplace smoothing} para que não ocorra essa possibilidade.
+Neste caso, é somado 1 a cada palavra e ao total de palavras, são somadas as
+quantidades de palavras diferentes do \textit{training set}, que neste caso são
+as seguintes 16 palavras distintas: \textit{``The''}, \textit{``food''},
+\textit{``was"}, \textit{``great"}, \textit{``They"}, \textit{``are"},
+\textit{``horrible!''}, \textit{``I"}, \textit{``love"}, \textit{``here''},
+\textit{``This"}, \textit{``place"}, \textit{``is"}, \textit{``wonderful"},
+\textit{``Forgettable"}, \textit{``experience"} 
+
+Neste caso, o cálculo da probabilidade da frase de exemplo \textit{``This place
+is great''} para cada classe é representado pela tabela abaixo:
 
 \begin{table}[htb]
 \centering
-\label{123}
-\begin{tabular}{|l|l|}
+\renewcommand{\arraystretch}{1.5}% Spread rows out...
+\begin{tabular}{lll}
 \hline
-Carro  & Categoria \\ \hline
-Focus  & Sedan     \\ \hline
-Gol    & Hatch     \\ \hline
-Focus  & Hatch     \\ \hline
-Focus  & Sedan     \\ \hline
-Focus  & Hatch     \\ \hline
-Fox    & Hatch     \\ \hline
-Fiesta & Hatch     \\ \hline
-Cruze  & Sedan     \\ \hline
-Focus  & Hatch     \\ \hline
-\end{tabular} 
-\caption{Tabela de Carro e Categoria.}
-\end{table}
 
-Probabilidade do Focus ser sedan:
-
-\[ P(Sedan|Focus) = \frac{P(Focus|Sedan) P(Sedan)}{P(Focus)}  \]
-
-\[ P(Sedan|Focus) = \frac{2/3 * 3/10}{5/10} = \frac{0,2}{0,5} = 0,4\]
-
-Probabilidade do Focus ser um hatch:
-
-\[ P(Hatch|Focus) = \frac{P(Focus|Hatch) P(Hatch)}{P(Focus)}  \]
-
-\[ P(Hatch|Focus) = \frac{3/6 * 7/10}{5/10} = \frac{0,35}{0,5} = 0,7\]
-
-No caso utilizado como exemplo, o Focus(Atributo ou \textit{Feature}) é um hatch
-(Rótulo ou \textit{Label}).
-Porém, caso tenhamos mais um atributo para utilizar na classificação o classificador Naive Bayes não
-considera nenhuma dependência.
-Como por exemplo a frase ``O carro era ano 2010 e tinha 2 portas'' com os
-seguintes atributos:
-
-\begin{table}[htb]
-\centering
-\begin{tabular}{|l|l|l|l|}
-\hline
-Carro  & Ano  & Portas & Categoria \\ \hline
-Focus  & 2010 & 2      & Sedan     \\ \hline
-Gol    & 2010 & 4      & Hatch     \\ \hline
-Focus  & 2011 & 4      & Hatch     \\ \hline
-Focus  & 2011 & 2      & Sedan     \\ \hline
-Focus  & 2011 & 2      & Hatch     \\ \hline
-Fox    & 2012 & 4      & Hatch     \\ \hline
-Fiesta & 2012 & 2      & Hatch     \\ \hline
-Cruze  & 2013 & 4      & Sedan     \\ \hline
-Focus  & 2013 & 2      & Hatch     \\ \hline
+Palavra & Positiva & Negativa \\ \hline
+This & \large $\frac{1 + 1}{13 + 16}$ & \large $\frac{0 + 1}{5 + 16}$ \\
+place & \large $\frac{1 + 1}{13 + 16}$ & \large $\frac{0 + 1}{5 + 16}$ \\
+is & \large $\frac{1 + 1}{13 + 16}$ & \large $\frac{0 + 1}{5 + 16}$ \\
+great & \large $\frac{1 + 1}{13 + 16}$ & \large $\frac{0 + 1}{5 + 16}$ \\
 \end{tabular}
-\caption{Tabela de anos, carros, portas e categorias.}
-\label{my-label}
+\caption{Tabela de Palavras e Probabilidades.}
+\label{tab:probabilidadesnb}
 \end{table}
 
-O cálculo será feito da seguinte forma:
+Utilizando a tabela \ref{tab:probabilidadesnb}, o classificador irá inferir a
+probabilidade da frase \textit{``This place is great''} ser classificada como
+positiva ou negativa:
+\[ P(Positiva|\textit{This place is great})
+=
+P(\textit{This place is great}|Positiva) \times
+P(Positiva)
+\]
+\[ P(\textit{This place is great}|Positiva) = \frac{1 + 1}{13 + 16} \times
+\frac{1 + 1}{13 + 16} \times \frac{1 + 1}{13 + 16} \times
+\frac{1 + 1}{13 + 16} \times \frac{3}{5}
+\]
+\[ P(\textit{This place is great}|Positiva) = 0.138
+\]
 
-\[ P(d|c) = P(d_1|c) * P(d_2|c)* \ldots * P(d_n|c) \]
+\[ P(Negativa|\textit{This place is great})
+=
+P(\textit{This place is great}|Negativa) \times
+P(Negativa)
+\]
+\[ P(\textit{This place is great}|Negativa) = \frac{0 + 1}{5 + 16} \times
+\frac{0 + 1}{5 + 16} \times \frac{0 + 1}{5 + 16} \times
+\frac{0 + 1}{5 + 16} \times \frac{2}{5}
+\]
+\[ P(\textit{This place is great}|Negativa) = 0.0000021
+\]
 
-\[ P(Sedan|Focus) = P(Portas=2|Sedan) * P(Ano=2010|Sedan) \ldots * \]
-
-\[ P(Sedan|Focus) = 2/3 * 1/3 \ldots * \]
-
-Por assumir independência entre seus atributos, os valores obtidos nós cálculos
-podem ser armazenados no banco de dados e reaproveitados. Por isso, sua
-performance é considerada incrívelmente boa até mesmo para casos aonde temos forte dependência de
-atributos \cite{domingos97naivebayes}.
-
-%TODO EXEMPLO
-\section{\textit{Maximum Entropy}}
-O classificador \ac{MaxEnt} tem como
-característica principal a preferência por modelos de dados uniformes sem efetuar nenhuma suposição injustificada.
-
-Podemos utilizar um exemplo similar ao anterior para demonstrar a lógica do
-classificador \ac{MaxEnt}. 
- 
-``João comprou um carro.''.
-
-Supondo que temos que classificar o tipo de carro comprado em três categorias:
-
-\begin{itemize}
-  \item Hatch.
-  \item Sedan.
-  \item Cupê.
-\end{itemize}
-
-Podemos afirmar que:
-
-\[ P(Hatch) + P (Sedan) + P(Cupe) = 1 \]
-
-Como só temos essas três possibilidades de classificação no nosso
-exemplo, o carro só pode ser classificado em uma dessas três possibilidades, ou
-seja, a soma das três probabilidades deve ser 100\% ou 1 essa é a primeira
-restrição ou \textit{constraint}. Abaixo duas tabelas que satisfazem essa
-restrição:
-
-\begin{table}[htb]
-\centering
-\begin{tabular}{|l|l|}
-\hline
-Tipo  & \%   \\ \hline
-Sedan & 33\% \\ \hline
-Hatch & 33\% \\ \hline
-Cupê  & 33\% \\ \hline
- \end{tabular}
-\caption{Tabela de Probabilidades A} 
-\end{table}
-\begin{table}[htb]
-\centering
- \begin{tabular}{|l|l|}
-\hline
-Tipo  & \%   \\ \hline
-Sedan & 50\% \\ \hline
-Hatch & 50\% \\ \hline
-Cupê  & 0\% \\ \hline
- \end{tabular}  
-\caption{Tabela de Probabilidades B} 
-\end{table}
-
-Sem nenhum conhecimento prévio da distribuição desses carros, ou seja, a
-quantidade de carros comprados por tipo, o classificador assume uma distribuição
-uniforme das probabilidades, portanto, com maior entropia.
-
-\begin{itemize}
-  \item Hatch - 33\%.
-  \item Sedan - 33\%.
-  \item Cupê - 33\%.
-\end{itemize}
-
-Agora, supondo que a partir do nosso banco de dados conseguimos verificar que em
-80\% dos casos o veículo comprado era um sedan ou hatch, temos uma nova
-restrição:
-
-\[ P(Hatch) + P (Sedan) = 0.8 \]
-
-Podemos novamente ter n distribuições diferentes, porém a distribuição mais
-uniforme que satisfaz as nossas duas restrições são:
-
-\begin{itemize}
-  \item Hatch - 40\%.
-  \item Sedan - 40\%.
-  \item Cupê - 30\%.
-\end{itemize}
-
-Esse é o princípio da Máxima Entropia utilizado nessa forma de classificação.
-Primeiro é descoberta a frequência de cada atributo, depois é procurada a
-distribuição que máximiza a entropia, ou seja, a mais uniforme.
-
-%\subsection{Modelo Probabilístico}
-
-%O seu modelo probabilístico para as probabilidades de observarmos o evento c
-%quando d for verdadeiro:
-
-%\[ P(c|d) := \frac{1}{Z(d)} exp (\Sigma_i\lambda_{i,c}F_{i,c}(d,c))\]
-
-
+Portanto, a partir dessas duas possibilidade, utilizando o método de
+classificação Naive Bayes para efetuar a análise de sentimentos, ele iria
+classificar a frase ``This place is great'' como positiva por essa probabilidade
+(0.138) ser maior que a probabilidade dessa frase ser negativa (0.0000021).
 
 
 
@@ -609,4 +594,3 @@ Ele faz uso de cinco regras gerais:
   as três palavras anteriores \textit{``place isn't that''} encontramos uma
   negação, mudando o sentimento expresso da frase de positivo para negativo.
 \end{itemize}
-
