--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -20,6 +20,7 @@
 \usepackage{mathtools}
 \usepackage{tabularx}
 \usepackage{adjustbox}
+\usepackage{amsmath}
 \usepackage{booktabs}
 \usepackage{textcomp}
 %\usepackage[brazilian]{babel}
